--- a/source/_posts/关于本站.md
+++ b/source/_posts/关于本站.md
@@ -1,15 +1,8 @@
-title: README.md
+title: 关于本站
 sticky: true
 date: 2025-10-12 12:00:30
 tags:
 ---
-## 关于我
-- 2026年 福建农林大学毕业  
-- 计算机科学与技术专业
-- C/C++ 后端萌新
-- 垃圾邮件投递者
-- 人才库抢手成员
-- 樱小路露娜的狗
 ## 关于本站
 这个网站是 Chieko3020 托管于 [Github](https://github.com/) 的静态网站
 使用 [Hexo](http://zespia.tw/hexo) 和 [D-Sketon](https://github.com/D-Sketon/)的 [Hexo灵梦主题](https://github.com/D-Sketon/hexo-theme-reimu) 进行前端网页的建设
