--- a/source/_posts/一些神秘小网站.md
+++ b/source/_posts/一些神秘小网站.md
@@ -1,5 +1,5 @@
 ---
-title: 盘点一些神秘小网站
+title: 一些神秘小网站
 date: 2025-10-12 17:41:43
 tags:
 ---
@@ -11,7 +11,9 @@ tags:
 
 ## 资源向  
 
-[Chieko3020](https://chieko3020.xyz/)  ~~自己的网站怎么就不算是神秘小网站了~~
+[Chieko3020](https://chieko3020.xyz/)  也就是这个网站
+> ~~自己的网站怎么就不算是神秘小网站了~~
+> ~~Github 服务器访问不稳定你就说神不神秘吧~~
 [萌番组](https://bangumi.moe/)  ~~谁会在哔哩哔哩看番啊~~    
 [andy826766](https://drive.google.com/drive/folders/1IbM67amQHYXjATVSi2LjBKkiIYK_Ac-O)  andy826766 的一些 MIDI 文件 大多是 Arcara 收录曲    
 [Anna's Archive](https://annas-archive.org/)  电子图书馆  找电子书挺好用的
@@ -27,7 +29,7 @@ tags:
 [C++ Reference](https://en.cppreference.com/)  cpp 文档  
 [Effective C++](https://wizardforcel.gitbooks.io/effective-cpp/content/1.html)  电子书  
 [Hello Algo](https://github.com/krahets/hello-algo)  你好，算法！ 电子书   
-[C++ 指南](https://chengxumiaodaren.com/)  程序喵的 C++ 编程指南  
+[C++ 指南](https://chengxumiaodaren.com/)  程序喵的 C++ 编程指南 讲了很多 Modern C++ 的内容    
 [编程指北](https://csguide.cn/)  综合性学习指南  
 [小林 Coding](https://xiaolincoding.com/) 同样是综合性学习指南  
 [代码随想录](https://programmercarl.com/) 同样是综合性学习指南 这个比较全面  
