--- a/source/_posts/关于本站.md
+++ b/source/_posts/关于本站.md
@@ -1,9 +1,9 @@
+---
 title: 关于本站
 date: 2025-10-12 12:00:30
-tags:
----
-## 关于本站  
-
+tags: "你知道吗"
+categories: "——不可解的它的一切—— 说人话不就是“关于网站”吗"
+---  
 这个网站是 Chieko3020 托管于 [Github](https://github.com/) 的静态网站  
 
 使用 [Hexo](http://zespia.tw/hexo) 和 [D-Sketon](https://github.com/D-Sketon/)的 [Hexo灵梦主题](https://github.com/D-Sketon/hexo-theme-reimu) 进行前端网页的建设  
