--- a/source/_posts/关于本站.md
+++ b/source/_posts/关于本站.md
@@ -2,7 +2,7 @@
 title: 关于本站
 date: 2025-10-12 12:00:30
 tags: 你知道吗
-categories: ——不可解的它的一切—— 说人话不就是“关于网站”吗
+categories: 不可解的它的一切
 ---  
 这个网站是 Chieko3020 托管于 [Github](https://github.com/) 的静态网站  
 
