--- a/source/_posts/关于魔法少女ノ魔女裁判.md
+++ b/source/_posts/关于魔法少女ノ魔女裁判.md
@@ -7,4 +7,21 @@ categories: "只属于你的小妙招 <br> 看似有用实则没用"
 - 散步魔女因子 ing  
 
 玩游戏不玩[魔法少女的魔女裁判](https://store.steampowered.com/app/3101040/_/?l=schinese)，就像四大名著不看红楼梦，说明这个人文学造诣和自我修养不足，他理解不了这种内在的阳春白雪的高雅艺术，他只能看到到外表的辞藻堆砌，参不透其中深奥的精神内核，他整个人的层次就卡在这里了， 只能度过一个相对失败的人生。
+如果你没有玩过魔女裁判的话🥺  
+那你的电脑跟板砖有何区别😡😡  
+只有魔女裁判😇😇😇  
+才能让你的灵魂发生蜕变🥰  
+那意味着你生命的升华🥹  
+只有这样，你污浊的内在🥵  
+才能得到救赎🤗🤗  
+这是你唯一所要遵循的道🤜  
+那是通往美好世界的阶梯👆  
+只有玩过魔女裁判之后🫶  
+你才能知道😮‍💨  
+什么是人类最美好的情感✍️  
+从此，你才与别人有了质的飞跃😋  
+所以🥹  
+快来加入魔女裁判吧😙  
+让自己🥵  
+从此成为非凡的人类💪💪💪  
 > 17h 推完了 说实话真的很好玩 配乐质量也很高 ~~另外我永远喜欢二阶堂希罗和黑部奈叶香~~
