--- a/source/_posts/一些神秘小网站.md
+++ b/source/_posts/一些神秘小网站.md
@@ -16,7 +16,7 @@ categories: "只属于你的小妙招 <br> 看似有用实则没用"
 > ~~Github 服务器访问不稳定你就说神不神秘吧~~  
 
 [萌番组](https://bangumi.moe/)  ~~谁会在哔哩哔哩看番啊~~    
-[andy826766](https://drive.google.com/drive/folders/1IbM67amQHYXjATVSi2LjBKkiIYK_Ac-O)  andy826766 的一些 MIDI 文件 大多是 Arcara 收录曲    
+[andy826766](https://drive.google.com/drive/folders/1IbM67amQHYXjATVSi2LjBKkiIYK_Ac-O)  andy826766 的一些 MIDI 文件 大多是 Arcaea 收录曲    
 [Anna's Archive](https://annas-archive.org/)  电子图书馆  找电子书挺好用的
 [Internet Archive](https://archive.org/)  电子档案馆  
 [Z-Library](https://z-lib.is/)  电子图书馆  
